add http functionality supporting MicroServer